--- a/public/notes.html
+++ b/public/notes.html
@@ -35,10 +35,10 @@
       </div>
     </div>
   </div>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <!-- <script src="./assets/js/Changed_index.js"></script> -->
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="./assets/js/index.js"></script>
 </body>
-
+<!-- 
 <script type="text/javascript">
 
   let $noteTitle = $(".note-title");
@@ -187,6 +187,6 @@
   getAndRenderNotes();
 
 
-</script>
+</script> -->
 
 </html>
